# ReguloNado

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  notes.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
notebooks/: 2026-05-20-dataset-paths.txt  bigwig_scale_factors.parquet  find-datasets.ipynb  prototype-data-scaling.ipynb  test_paths.txt
python/configs/: train.yaml
python/configs/backbone/: borzoi.yaml  enformer.yaml
python/configs/experiment/: condition_agnostic_borzoi.yaml  condition_agnostic_calibrated.yaml  condition_agnostic_enformer.yaml  condition_agnostic_full_finetune.yaml  ctcf_head_only_calibrated.yaml  head_only_borzoi.yaml  magnitude_fix_high_poisson_weight.yaml  magnitude_fix_log1p_huber_no_squash.yaml  magnitude_fix_poisson_nll_no_squash.yaml  magnitude_fix_transfer_calibration.yaml  sharp_transfer_learning.yaml  stage2_unfreeze2_borzoi.yaml  stage3_deep_finetune_borzoi.yaml  stage4_peak_finetune_borzoi.yaml
python/configs/head/: film.yaml  residual_film.yaml  transfer_mlp.yaml
python/configs/loss/: log1p_huber.yaml  mse.yaml  poisson_multinomial.yaml  poisson_nll.yaml  scaled_poisson_multinomial.yaml  topk_additive.yaml  topk_reweight.yaml  transfer_calibration.yaml
python/regulonado/: __init__.py  __main__.py  dataset.py  experiments.py  metrics.py  predict.py  recompress.py  scaling.py  train.py
python/regulonado/model/: __init__.py  adapters.py  config.py  heads.py  wrapper.py
python/regulonado/training/: __init__.py  accelerate_trainer.py  callbacks.py  config.py  data.py  losses.py  metrics.py  provenance.py  transforms.py
python/regulonado/viz/: __init__.py  plots.py
scripts/: README.md  build_dataset_slurm.sh  calculate_original_scaling.sh  calculate_tmm_scaling.sh  calculate_tmm_scaling_slurm.sh  create_dataset.sh  install_flash_attn_slurm.sh  install_gpu_env.sh  install_gpu_env_slurm.sh  jupyter_slurm.sh  rechunk_dataset.sh  rechunk_dataset_slurm.sh  recompress_dataset.py  resume_condition_agnostic_slurm.sh  run_magnitude_experiments_slurm.sh  smoketest_chrom_pass.sh  train_condition_agnostic.sh  train_hf_dataset.sh  train_hf_dataset_slurm.sh  train_pipeline_slurm.sh  train_slurm.sh
scripts/experiment/: magnitude_fix_log1p_huber.yaml  magnitude_fix_poisson_nll.yaml  resume_condition_agnostic_borzoi.yaml
src/: bigwig_io.rs  binning.rs  chrom_pass.rs  debug.rs  fasta.rs  io_utils.rs  lib.rs  schema.rs  signal_file.rs  writers.rs
tests/: bench_arrow_build.py  bench_arrow_build.sh  bench_bw_reading.py  bench_full_dataset.py  bench_full_dataset.sh  test_chrom_pass.py  test_dataset_staging.py  test_experiments.py  test_losses.py  test_model_transfer.py  test_predict_bigwig.py  test_train_metrics.py
