[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "regulonado"
version = "0.1.0"
description = "Generic sequence-to-function model finetuning"
requires-python = ">=3.11,<3.13"

dependencies = [
    "accelerate",
    "borzoi-pytorch",
    "datasets>=3.0",
    "enformer-pytorch",
    "hydra-core>=1.3",
    "hydra-submitit-launcher>=1.2",
    "lightning>=2.2,<3",
    "loguru>=0.7",
    "ninja",
    "numpy>=1.24",
    "pandas>=2.0",
    "peft",
    "polars",
    "psutil",
    "pydantic>=2.0",
    "pyranges1",
    "pybigtools",
    "pysam",
    "scipy",
    "seaborn",
    "plotly",
    "tangermeme>=0.4.0",
    "torch>=2.5,<2.7",
    "tqdm>=4.65",
    "transformers>=4.40",
    "typer",
    "wandb>=0.16",
    "ruff>=0.15.13",
]

[project.optional-dependencies]
gpu = [
    "flash_attn>=2.6,<2.8",
]
jupyter = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "nbformat",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "maturin>=1.0",
]

[project.scripts]
regulonado = "regulonado.__main__:main"
regulonado-train = "regulonado.train:main"

[tool.maturin]
# Modern maturin mixed layout:
#   src/     → Rust source (src/lib.rs)
#   python/  → Python packages
# Extension is installed as regulonado._rs (inside the regulonado package).
python-source = "python"
module-name = "regulonado._rs"
features = ["pyo3/extension-module"]
include = ["python/configs/**/*.yaml"]

[tool.uv]
extra-build-dependencies = { flash-attn = ["torch", "psutil", "ninja"] }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
