[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "regulonado"
version = "0.1.0"
description = "Generic sequence-to-function model finetuning"
requires-python = ">=3.12,<3.14"

# Core: minimum to import the package and run the CLI without any ML deps.
dependencies = [
    "loguru>=0.7",
    "numpy>=2",
    "pydantic>=2.0",
    "typer",
]

[project.optional-dependencies]
# ── data pipeline (BigWig / Arrow / FASTA) ────────────────────────────────────
data = [
    "datasets>=5.0.0",
    "pandas>=2",
    "polars",
    "psutil",
    "pybigtools",
    "pyranges1>=1.0",
    "pysam>=0.23",
    "scipy",
    "tangermeme>=1.3.0",
    "tqdm>=4.65",
]

# ── full training stack (includes data) ───────────────────────────────────────
train = [
    "regulonado[data]",
    "accelerate",
    "borzoi-pytorch",
    "enformer-pytorch",
    "hydra-core>=1.3",
    "hydra-submitit-launcher>=1.2",
    "lightning>=2.2",
    "peft",
    "torch>=2.5",
    "transformers>=5.12.1",
    "wandb>=0.16",
]

# ── GPU / FlashAttention ──────────────────────────────────────────────────────
gpu = [
    "regulonado[train]",
    "ninja",
    "flash_attn>=2.6",
]

# ── visualisation ─────────────────────────────────────────────────────────────
viz = [
    "plotly",
    "seaborn",
    "matplotlib"
]

# ── Jupyter notebooks ─────────────────────────────────────────────────────────
jupyter = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "nbformat",
]

# ── development ───────────────────────────────────────────────────────────────
dev = [
    "maturin>=1.0",
    "ninja",
    "pytest>=9.1.1",
    "ruff>=0.4",
]

# ── CI test suite (no torch/GPU needed) ───────────────────────────────────────
test = [
    "regulonado[data]",
    "pyarrow",
    "pyfaidx",
    "pytest>=9.1.1",
]

# ── convenience meta-extra ────────────────────────────────────────────────────
all = ["regulonado[data,train,viz]"]

[project.urls]
Repository = "https://github.com/alsmith151/ReguloNado"

[project.scripts]
regulonado = "regulonado.__main__:main"
regulonado-train = "regulonado.train:main"

[tool.maturin]
# Modern maturin mixed layout:
#   src/     → Rust source (src/lib.rs)
#   python/  → Python packages
# Extension is installed as regulonado._rs (inside the regulonado package).
python-source = "python"
module-name = "regulonado._rs"
features = ["pyo3/extension-module"]
include = ["python/configs/**/*.yaml"]

[tool.uv]
extra-build-dependencies = { flash-attn = ["torch", "psutil", "ninja"] }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
